added header and test button

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AA1_Mobile"
         tools:targetApi="31">
+
+        <activity
+            android:name=".Agendamento"
+            android:exported="false"
+            android:label="@string/title_activity_agendamento"
+            android:theme="@style/Theme.AA1_Mobile" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
