--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,23 @@ android {
     }
 }
 
+javaCompileOptions{
+    annotationProcessorOptions{
+        arguments += [
+            "room.schemaLocation":$projectDir/schemas.toString(),
+            "room.incremental":"true",
+            "room.expandProjection":"true"
+        ]
+    }
+}
+
 dependencies {
+    def room_version = "2.4.1"
+
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-rxjava2:$room_version"
+    implementation "io.reactivex.rxjava2:rxandroid:2.0.1"
 
     implementation 'com.squareup.retrofit2:retrofit:2.1.0'
     implementation 'com.google.code.gson:gson:2.6.2'
