Completado insert por android room

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,6 +18,15 @@ android {
         vectorDrawables {
             useSupportLibrary true
         }
+
+        javaCompileOptions {
+            annotationProcessorOptions {
+                arguments += [
+                        "room.schemaLocation":"$projectDir/schemas".toString(),
+                        "room.incremental":"true",
+                        "room.expandProjection":"true"]
+            }
+        }
     }
     buildFeatures {
         viewBinding = true
@@ -47,16 +56,6 @@ android {
         resources {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
         }
-    }
-}
-
-javaCompileOptions{
-    annotationProcessorOptions{
-        arguments += [
-            "room.schemaLocation":$projectDir/schemas.toString(),
-            "room.incremental":"true",
-            "room.expandProjection":"true"
-        ]
     }
 }
 
