Configurado novos card com utilização do room

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,9 @@
 /.idea/workspace.xml
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
+/.idea/deploymentTargetDropDown.xml
 .DS_Store
+/app/schema
 /build
 /captures
 .externalNativeBuild
