--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 /.idea/assetWizardSettings.xml
 /.idea/deploymentTargetDropDown.xml
 .DS_Store
-/app/schema
+/app/schemas
 /build
 /captures
 .externalNativeBuild
